feat(epub): implement EpubBuilder class for EPUB generation
- Add EpubBuilder class with image processing (compression/original)
- Implement buildMerged() for combining volumes into single EPUB
- Implement buildVolume() for individual volume EPUBs
- Add epub-gen-memory dependency for EPUB generation
- Update .gitignore with Node.js project patterns
- Move Python files to python_legacy/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Data directories
 data/
 result/
 output/
 input/
+
+# Runtime files
 books.json
+
+# Python
 __pycache__/
+*.pyc
+*.pyo
+.venv/
+venv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Test coverage
+coverage/
+
+# Environment
+.env
+.env.local
