--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
             "types": "./dist/index.d.ts"
         }
     },
+    "files": [
+        "dist",
+        "src",
+        "tsconfig.json"
+    ],
     "scripts": {
         "build": "tsc",
         "dev": "bun run src/bin/cli.ts",
         "start": "bun run dist/bin/cli.js",
         "test": "vitest --run",
         "test:watch": "vitest",
-        "lint": "tsc --noEmit"
+        "lint": "tsc --noEmit",
+        "prepare": "tsc"
     },
     "keywords": [
         "light-novel",
