--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
         "commander": "^14.0.2",
         "epub-gen-memory": "^1.1.2",
         "ora": "^9.0.0",
-        "sharp": "^0.34.5"
+        "sharp": "^0.34.5",
+        "socks-proxy-agent": "^8.0.5",
+        "undici": "^7.16.0"
     },
     "devDependencies": {
         "@types/node": "^24.10.1",
