--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
         "cheerio": "^1.1.2",
         "commander": "^14.0.2",
         "epub-gen-memory": "^1.1.2",
+        "https-proxy-agent": "^7.0.6",
         "ora": "^9.0.0",
         "sharp": "^0.34.5",
-        "socks-proxy-agent": "^8.0.5",
-        "undici": "^7.16.0"
+        "socks": "^2.8.7",
+        "socks-proxy-agent": "^8.0.5"
     },
     "devDependencies": {
         "@types/node": "^24.10.1",
